--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.6.1",
+    "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
@@ -32,6 +33,7 @@
     "@nestjs/swagger": "^5.2.1",
     "@prisma/client": "^3.13.0",
     "@types/bcrypt": "^5.0.0",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "blizzard-api-sample": "^1.0.1",
@@ -46,12 +48,17 @@
     "nestjs-real-ip": "^2.2.0",
     "nodemailer": "^6.7.5",
     "passport": "^0.5.2",
+    "passport-apple": "^2.0.1",
+    "passport-discord": "^0.1.4",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-jwt-cookiecombo": "^1.0.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.3.0",
+    "uuid": "^9.0.0",
     "yargs": "^17.4.1"
   },
   "devDependencies": {
