--- a/client/package.json
+++ b/client/package.json
@@ -20,14 +20,22 @@
     "@mantine/nprogress": "^5.0.0",
     "@mantine/prism": "^5.0.0",
     "@mantine/spotlight": "^5.0.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "@tabler/icons": "^1.78.1",
     "axios": "^0.27.2",
     "dayjs": "^1.11.4",
     "hover.css": "^2.3.2",
-    "next": "12.2.3",
+    "next": "12.2.5",
+    "next-auth": "^4.12.0",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
+    "react-cookie-consent": "^8.0.1",
     "react-dom": "18.2.0",
-    "react18-input-otp": "^1.1.0"
+    "react-redux": "^8.0.4",
+    "react18-input-otp": "^1.1.0",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "18.6.1",
