--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,8 @@
     "react18-input-otp": "^1.1.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "yaml": "^2.1.3"
   },
   "devDependencies": {
     "@types/node": "18.6.1",
