--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "logger-service"]
-	path = logger-service
+	path = microservices/logger-service
 	url = https://github.com/kevin-huet/logger-service.git
 [submodule "mailing-service"]
-	path = mailing-service
+	path = microservices/mailing-service
 	url = https://github.com/kevin-huet/mailing-service.git
 [submodule "auth-service"]
-	path = auth-service
+	path = microservices/auth-service
 	url = https://github.com/kevin-huet/auth-service.git
 [submodule "storage-service"]
-	path = storage-service
+	path = microservices/storage-service
 	url = https://github.com/kevin-huet/storage-service.git
