--- a/api/package.json
+++ b/api/package.json
@@ -22,18 +22,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs-modules/mailer": "^1.6.1",
-    "@nestjs/axios": "^0.1.0",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^2.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/jwt": "^8.0.0",
-    "@nestjs/passport": "^8.2.1",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/swagger": "^5.2.1",
-    "@prisma/client": "^3.13.0",
+    "@nestjs/microservices": "^9.1.6",
+    "@nestjs/passport": "^9.0.0",
+    "@prisma/client": "^4.5.0",
     "@types/bcrypt": "^5.0.0",
-    "axios": "^0.27.2",
+    "axios": "^1.1.3",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "blizzard-api-sample": "^1.0.1",
@@ -41,19 +34,13 @@
     "csurf": "^1.11.0",
     "dayjs": "^1.11.2",
     "deckstrings": "^2.2.1",
-    "ejs": "^3.1.7",
-    "handlebars": "^4.7.7",
-    "helmet": "^5.0.2",
+    "helmet": "^6.0.0",
     "nestjs-command": "^3.1.1",
     "nestjs-real-ip": "^2.2.0",
     "nodemailer": "^6.7.5",
-    "passport": "^0.5.2",
-    "passport-apple": "^2.0.1",
+    "passport": "^0.6.0",
     "passport-discord": "^0.1.4",
-    "passport-github2": "^0.1.12",
-    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
-    "passport-jwt-cookiecombo": "^1.0.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -62,9 +49,9 @@
     "yargs": "^17.4.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.11",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/cli": "^9.1.5",
+    "@nestjs/schematics": "^9.0.3",
+    "@nestjs/testing": "^9.1.6",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
@@ -80,8 +67,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
-    "prisma": "^3.13.0",
-    "source-map-support": "^0.5.20",
+    "prisma": "^4.5.0",
+    "source-map-support": "^0.5.21",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.3.0",
