--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -8,3 +8,14 @@ services:
       - POSTGRES_PASSWORD=postgres
     ports:
       - '5432:5432'
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    hostname: rabbitmq
+    volumes:
+      - /var/lib/rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    env_file:
+      - ./rabbitmq/rabbitmq.env
