--- a/api/package.json
+++ b/api/package.json
@@ -22,10 +22,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^1.0.0",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/microservices": "^9.1.6",
     "@nestjs/passport": "^9.0.0",
+    "@nestjs/platform-express": "^9.1.6",
+    "@nestjs/swagger": "^6.1.3",
+    "@nestjs/testing": "^9.1.6",
     "@prisma/client": "^4.5.0",
     "@types/bcrypt": "^5.0.0",
+    "amqp-connection-manager": "^4.1.9",
+    "amqplib": "^0.10.3",
     "axios": "^1.1.3",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
@@ -35,6 +43,7 @@
     "dayjs": "^1.11.2",
     "deckstrings": "^2.2.1",
     "helmet": "^6.0.0",
+    "jwt-decode": "^3.1.2",
     "nestjs-command": "^3.1.1",
     "nestjs-real-ip": "^2.2.0",
     "nodemailer": "^6.7.5",
@@ -51,7 +60,6 @@
   "devDependencies": {
     "@nestjs/cli": "^9.1.5",
     "@nestjs/schematics": "^9.0.3",
-    "@nestjs/testing": "^9.1.6",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
@@ -68,6 +76,7 @@
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
     "prisma": "^4.5.0",
+    "prisma-dbml-generator": "^0.9.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
