--- a/client/package.json
+++ b/client/package.json
@@ -22,15 +22,18 @@
     "@mantine/spotlight": "^5.0.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@tabler/icons": "^1.78.1",
+    "@types/react-google-recaptcha": "^2.1.5",
     "axios": "^0.27.2",
     "dayjs": "^1.11.4",
     "hover.css": "^2.3.2",
+    "http-status": "^1.5.3",
     "next": "12.2.5",
     "next-auth": "^4.12.0",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-cookie-consent": "^8.0.1",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-redux": "^8.0.4",
     "react18-input-otp": "^1.1.0",
     "redux": "^4.2.0",
