--- a/api/package.json
+++ b/api/package.json
@@ -63,6 +63,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.11.33",
     "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.6",
